@@ -8,6 +8,7 @@
 	manifests. Made some changes to reuse existing code as much as 
 	possible. Better support for local/remote files - but requires
 	catching an Uri exception for local files :-(.
+	* XmlSignature.cs: Added constants for Manifest element and URI.
 
 2004-03-26  Atsushi Enomoto <atsushi@ximian.com>
 
